# pjecz-casiopea-flask

./: .gitignore  README.md  pyproject.toml  pyproject.toml.poetry
cli/commands/: migrar.py
pjecz_casiopea_flask/blueprints/cit_categorias/: views.py
pjecz_casiopea_flask/blueprints/cit_citas/: models.py
pjecz_casiopea_flask/blueprints/cit_citas/templates/cit_citas/: detail.jinja2
pjecz_casiopea_flask/blueprints/oficinas/: views.py
pjecz_casiopea_flask/blueprints/usuarios/: forms.py  views.py
pjecz_casiopea_flask/blueprints/usuarios/templates/usuarios/: login.jinja2  profile.jinja2
pjecz_casiopea_flask/config/: firebase.py
pjecz_casiopea_flask/static/css/: login.css
pjecz_casiopea_flask/static/js/: firebase-login.js
