[project]
name = "pjecz-casiopea-flask"
version = "0.1.1"
description = "Plataforma de administración del sistema de citas."
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Guillermo Valdes", email = "guillermo.valdes@pjecz.gob.mx" },
    { name = "Lucia Aranda", email = "lucia.aranda@pjecz.gob.mx" }
    { name = "Ricardo Valdes", email = "ricardo.valdes@pjecz.gob.mx" }
]
dependencies = [
    "cryptography>=46.0.6",
    "email-validator>=2.3.0",
    "flask>=3.1.3",
    "flask-login>=0.6.3",
    "flask-moment>=1.0.6",
    "flask-socketio>=5.6.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "google-auth>=2.49.1",
    "google-cloud>=0.34.0",
    "google-cloud-secret-manager>=2.27.0",
    "google-cloud-storage>=3.10.1",
    "gunicorn>=25.3.0",
    "hashids>=1.3.1",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "pytz>=2026.1.post1",
    "rq>=2.7.0",
    "sendgrid>=6.12.5",
    "sqlalchemy>=2.0.48",
    "sqlalchemy-utils>=0.42.1",
    "unidecode>=1.4.0",
    "uvicorn>=0.42.0",
    "werkzeug>=3.1.7",
    "wtforms>=3.2.1",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "faker>=40.11.1",
    "isort>=8.0.1",
    "pre-commit>=4.5.1",
    "pylint>=4.0.5",
    "pylint-sqlalchemy>=0.3.0",
    "pytest>=9.0.2",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

# --- LOS SCRIPTS CAMBIAN DE FORMATO ---
[project.scripts]
cli = "cli.app:cli"

# --- LAS HERRAMIENTAS SE MANTIENEN IGUAL ---
[tool.black]
line-length = 128

[tool.isort]
line_length = 128
profile = "black"

[tool.basedpyright]
typeCheckingMode = "basic"
reportCallIssue = "hint"
reportMissingImports = "warning"
reportUndefinedVariable = "warning"
exclude = ["**/tests"]

[tool.ruff]
line-length = 128
lint.ignore = ["F821"] # Nota: Ruff suele preferir agrupar 'ignore' bajo 'lint'